--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -12,7 +12,7 @@
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
  -->
-<script src="https://carnivalapp.io/sites/534/init.js"></script>
+<!-- <script src="https://carnivalapp.io/sites/534/init.js"></script>
 <script>
   document.addEventListener("DOMContentLoaded", Carnival.init);
-</script>
+</script> -->
