修复部分浏览器不能显示 Emoji 的问题

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -10,7 +10,7 @@ body {
 body {
   position: relative;
   overflow-x: hidden;
-  font-family: 'Bitter', 'Lantinghei SC', 'Microsoft YaHei', sans-serif;
+  font-family: 'Bitter', 'Lantinghei SC', 'Microsoft YaHei', sans-serif, 'Segoe UI Emoji', 'Emoji', Tahoma, 'Geneva', 'Simsun';
   font-size: 16px;
   line-height: 28px;
   color: #222;
